module(
    name = "cel-spec",
)

bazel_dep(
    name = "abseil-cpp",
    version = "20230802.1",
    repo_name = "com_google_absl",
)
bazel_dep(
    name = "bazel_skylib",
    version = "1.4.1",
)
bazel_dep(
    name = "gazelle",
    version = "0.34.0",
    repo_name = "bazel_gazelle",
)
bazel_dep(
    name = "protobuf",
    version = "21.7",
    repo_name = "com_google_protobuf",
)
bazel_dep(
    name = "rules_cc",
    version = "0.0.9",
)
bazel_dep(
    name = "rules_go",
    version = "0.45.1",
    repo_name = "io_bazel_rules_go",
)
bazel_dep(
    name = "rules_java",
    version = "6.0.0",
)
bazel_dep(
    name = "rules_pkg",
    version = "0.7.0",
)
bazel_dep(
    name = "rules_proto",
    version = "5.3.0-21.7",
)
bazel_dep(
    name = "rules_python",
    version = "0.22.1",
)

non_module_dependencies = use_extension("//:extensions.bzl", "non_module_dependencies")
use_repo(
    non_module_dependencies,
    "com_google_googleapis",
)

googleapis_ext = use_extension("//:googleapis_ext.bzl", "googleapis_ext")
use_repo(
    googleapis_ext,
    "com_google_googleapis_imports",
)

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.21.1")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "org_golang_google_genproto_googleapis_api",
    "org_golang_google_genproto_googleapis_rpc",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
)
