# Description:
#   BUILD file for the CEL conformance libraries and data.
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])  # Apache 2.0

# TODO: Check if the generated path is correct.
# Generated via:
#    bazel build cel-spec/testutil:test_data_gen &&
#        bazel-bin/cel-cpp/testutil/test_data_gen
filegroup(
    name = "testdata",
    srcs = glob([
        "*.textpb",
        "*.binarypb",
    ]),
)

proto_library(
    name = "test_value_proto",
    srcs = [
        "test_value.proto",
    ],
    deps = [
        "@com_google_googleapis//google/api/expr/v1beta1:eval_proto",
        '@com_google_protobuf//:any_proto',
        '@com_google_protobuf//:duration_proto',
        '@com_google_protobuf//:struct_proto',
        '@com_google_protobuf//:timestamp_proto',
        '@com_google_protobuf//:wrappers_proto',
    ],
)

proto_library(
    name = "test_data_proto",
    srcs = [
        "test_data.proto",
    ],
    deps = [
#        "@com_google_googleapis//:expr_v1beta1",
        ":test_value_proto",
    ],
)

cc_proto_library(
    name = "test_data_cc_proto",
    deps = [":test_data_proto"],
)

cc_proto_library(
    name = "test_value_cc_proto",
    deps = [":test_value_proto"],
)

java_proto_library(
    name = "test_data_java_proto",
    deps = [":test_data_proto"],
)

java_proto_library(
    name = "test_value_java_proto",
    deps = [":test_value_proto"],
)
