load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

package(
    default_visibility = ["//visibility:public"],
)

licenses(["notice"])  # Apache 2.0

exports_files(["LICENSE"])

proto_library(
    name = "value_proto",
    srcs = [
        "value.proto",
    ],
    deps = [
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:struct_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "value_proto_go_proto",
    importpath = "github.com/google/cel-spec/proto/v1alpha1/value",
    proto = ":value_proto",
)

java_proto_library(
    name = "value_java_proto",
    deps = [":value_proto"],
)

java_lite_proto_library(
    name = "value_java_proto_lite",
    deps = [":value_proto"],
)

jspb_proto_library(
    name = "value_jspb_proto",
    deps = [":value_proto"],
)

proto_library(
    name = "eval_proto",
    srcs = [
        "eval.proto",
    ],
    deps = [
        ":value_proto",
        "@com_google_googleapis//:rpc_status",
    ],
)

go_proto_library(
    name = "eval_proto_go_proto",
    importpath = "github.com/google/cel-spec/proto/v1alpha1/eval",
    proto = ":eval_proto",
    deps = [
        ":value_proto_go_proto",
        "@com_google_googleapis//:rpc_status_go_proto",
    ]
)

java_proto_library(
    name = "eval_java_proto",
    deps = [":eval_proto"],
)

java_lite_proto_library(
    name = "eval_java_proto_lite",
    deps = [":eval_proto"],
)

jspb_proto_library(
    name = "eval_jspb_proto",
    deps = [":eval_proto"],
)

proto_library(
    name = "syntax_proto",
    srcs = [
        "syntax.proto",
    ],
    deps = [
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:struct_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "syntax_proto_go_proto",
    importpath = "github.com/google/cel-spec/proto/v1alpha1/syntax",
    proto = ":syntax_proto",
)

cc_proto_library(
    name = "syntax_cc_proto",
    deps = [":syntax_proto"],
)

py_proto_library(
    name = "syntax_py_pb2",
    deps = [":syntax_proto"],
)

java_proto_library(
    name = "syntax_java_proto",
    deps = [":syntax_proto"],
)

java_lite_proto_library(
    name = "syntax_java_proto_lite",
    deps = [":syntax_proto"],
)

jspb_proto_library(
    name = "syntax_jspb_proto",
    deps = [
        ":syntax_proto",
    ],
)

proto_library(
    name = "checked_proto",
    srcs = [
        "checked.proto",
    ],
    deps = [
        ":syntax_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:struct_proto",
    ],
)

go_proto_library(
    name = "checked_proto_go_proto",
    importpath = "github.com/google/cel-spec/proto/v1alpha1/checked",
    proto = ":checked_proto",
    deps = [":syntax_proto_go_proto"],
)

cc_proto_library(
    name = "checked_cc_proto",
    deps = [":checked_proto"],
)

py_proto_library(
    name = "checked_py_pb2",
    deps = [":checked_proto"],
)

java_proto_library(
    name = "checked_java_proto",
    deps = [":checked_proto"],
)

java_lite_proto_library(
    name = "checked_java_proto_lite",
    deps = [":checked_proto"],
)

jspb_proto_library(
    name = "checked_jspb_proto",
    deps = [":checked_proto"],
)

proto_library(
    name = "explain_proto",
    srcs = [
        "explain.proto",
    ],
    deps = [
        ":value_proto",
    ],
)

go_proto_library(
    name = "explain_proto_go_proto",
    importpath = "github.com/google/cel-spec/proto/v1alpha1/explain",
    proto = ":explain_proto",
    deps = [":value_proto_go_proto"]
)

java_proto_library(
    name = "explain_java_proto",
    deps = [":explain_proto"],
)

java_lite_proto_library(
    name = "explain_java_proto_lite",
    deps = [":explain_proto"],
)

jspb_proto_library(
    name = "explain_jspb_proto",
    deps = [
        ":explain_proto",
    ],
)
