load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(
    default_visibility = ["//visibility:public"],
)

licenses(["notice"])  # Apache 2.0

exports_files(["LICENSE"])

go_library(
    name = "go_default_library",
    srcs = [
        "simple.go",
    ],
    importpath = "github.com/google/cel-spec/tests/simple",
    deps = [
        "//proto/test/v1:conformance_test_go_proto",
        "//tools/celrpc:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@org_golang_google_genproto//googleapis/api/expr/v1alpha1:go_default_library",
    ],
)
