load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(
    default_visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "celrpc.go",
    ],
    importpath = "github.com/google/cel-spec/tools/celrpc",
    deps = [
        "@org_golang_google_genproto//googleapis/api/expr/v1alpha1:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection:go_default_library",
    ],
)
