load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(
    default_visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "celrpc.go",
    ],
    importpath = "github.com/google/cel-spec/tools/celrpc",
    deps = [
        "@org_golang_google_genproto//googleapis/api/expr/conformance/v1alpha1:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection:go_default_library",
        "@org_golang_google_protobuf//encoding/protojson:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
    ],
)
