load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(
    default_visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "celrpc.go",
    ],
    importpath = "github.com/google/cel-spec/tools/celrpc",
    deps = [
        "@org_golang_google_genproto//googleapis/api/expr/conformance/v1alpha1:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection:go_default_library",
        "@org_golang_google_protobuf//encoding/protojson:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
    ],
)

go_test(
    name = "celrpc_test",
    args = [
        "--server_cmd=$(rootpath //tools/celrpc/testpipeimpl/main)"
    ],
    data = [
        "//tools/celrpc/testpipeimpl/main",
    ],
    deps = [
        "@io_bazel_rules_go//go/tools/bazel",
    ],
    srcs = [
        "celrpc_test.go"
    ],
    embed = [":go_default_library"],
)
