package(
    default_visibility = ["//visibility:public"],
)

licenses(["notice"])  # Apache 2.0

proto_library(
    name = "test_value_proto",
    srcs = [
        "test_value.proto",
    ],
    deps = [
        "@com_google_googleapis//google/api/expr/v1alpha1:value_proto",
    ],
)

cc_proto_library(
    name = "test_value_cc_proto",
    deps = [":test_value_proto"],
)

proto_library(
    name = "test_message1_proto",
    srcs = [
        "test_message1.proto",
    ],
)

cc_proto_library(
    name = "test_message1_cc_proto",
    deps = [":test_message1_proto"],
)

proto_library(
    name = "test_message2_proto",
    srcs = [
        "test_message2.proto",
    ],
    deps = [
        ":test_message1_proto",
    ],
)

proto_library(
    name = "test_message3_proto",
    srcs = [
        "test_message3.proto",
    ],
)

proto_library(
    name = "test_message4_proto",
    srcs = [
        "test_message4.proto",
    ],
    deps = [
        ":test_message3_proto",
    ],
)
