package(default_visibility = ["//visibility:public"])

##############################################################################
# Common
##############################################################################

load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")

proto_library(
    name = "expr_proto",
    srcs = [
        "checked.proto",
        "eval.proto",
        "explain.proto",
        "syntax.proto",
        "value.proto",
    ],
    strip_import_prefix = "/proto",
    deps = [
        "@com_google_googleapis//google/rpc:status_proto",
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:struct_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

proto_library(
    name = "syntax_proto",
    srcs = [
        "syntax.proto",
    ],
    strip_import_prefix = "/proto",
    deps = [
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:struct_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

proto_library(
    name = "checked_proto",
    srcs = [
        "checked.proto",
    ],
    strip_import_prefix = "/proto",
    deps = [
        ":syntax_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:struct_proto",
    ],
)

proto_library(
    name = "value_proto",
    srcs = [
        "value.proto",
    ],
    strip_import_prefix = "/proto",
    deps = [
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:struct_proto",
    ],
)

proto_library(
    name = "eval_proto",
    srcs = [
        "eval.proto",
    ],
    strip_import_prefix = "/proto",
    deps = [
        ":value_proto",
        "@com_google_protobuf//:any_proto",
    ],
)

proto_library(
    name = "explain_proto",
    srcs = [
        "explain.proto",
    ],
    deprecation = "Use EvalState instead.",
    strip_import_prefix = "/proto",
    deps = [
        ":value_proto",
    ],
)

##############################################################################
# Java
##############################################################################

load("@com_google_protobuf//bazel:java_proto_library.bzl", "java_proto_library")
load("@com_google_protobuf//bazel:java_lite_proto_library.bzl", "java_lite_proto_library")

java_proto_library(
    name = "expr_java_proto",
    deps = [":expr_proto"],
)

java_lite_proto_library(
    name = "expr_java_proto_lite",
    deps = [":expr_proto"],
)

java_proto_library(
    name = "syntax_java_proto",
    deps = [":syntax_proto"],
)

java_lite_proto_library(
    name = "syntax_java_proto_lite",
    deps = [":syntax_proto"],
)

java_proto_library(
    name = "checked_java_proto",
    deps = [":checked_proto"],
)

java_lite_proto_library(
    name = "checked_java_proto_lite",
    deps = [":checked_proto"],
)

java_proto_library(
    name = "value_java_proto",
    deps = [":value_proto"],
)

java_lite_proto_library(
    name = "value_java_proto_lite",
    deps = [":value_proto"],
)

java_proto_library(
    name = "eval_java_proto",
    deps = [":eval_proto"],
)

java_lite_proto_library(
    name = "eval_java_proto_lite",
    deps = [":eval_proto"],
)

java_proto_library(
    name = "explain_java_proto",
    deprecation = "Use EvalState instead.",
    deps = [":explain_proto"],
)

###############################################################################
## Go
###############################################################################

load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

go_proto_library(
    name = "expr_go_proto",
    importpath = "cel.dev/expr",
    protos = [":expr_proto"],
    deps = [
        "@org_golang_google_genproto_googleapis_rpc//status:go_default_library",
    ],
)

go_proto_library(
    name = "syntax_go_proto",
    importpath = "cel.dev/expr",
    protos = [":syntax_proto"],
)

go_proto_library(
    name = "checked_go_proto",
    embed = [":syntax_go_proto"],
    importpath = "cel.dev/expr",
    protos = [":checked_proto"],
)

go_proto_library(
    name = "value_go_proto",
    importpath = "cel.dev/expr",
    protos = [":value_proto"],
)

go_proto_library(
    name = "eval_go_proto",
    embed = [":value_go_proto"],
    importpath = "cel.dev/expr",
    protos = [":eval_proto"],
    deps = [
        "@org_golang_google_genproto_googleapis_rpc//status:go_default_library",
    ],
)

go_proto_library(
    name = "explain_go_proto",
    deprecation = "Use EvalState instead.",
    embed = [":value_go_proto"],
    importpath = "cel.dev/expr",
    protos = [":explain_proto"],
)

###############################################################################
## C++
###############################################################################

# Note: cc_proto_library cannot generate a target for expr_proto due to the subtargets
# defined below

load("@com_google_protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")

cc_proto_library(
    name = "syntax_cc_proto",
    deps = [":syntax_proto"],
)

cc_proto_library(
    name = "checked_cc_proto",
    deps = [":checked_proto"],
)

cc_proto_library(
    name = "value_cc_proto",
    deps = [":value_proto"],
)

cc_proto_library(
    name = "eval_cc_proto",
    deps = [":eval_proto"],
)

cc_proto_library(
    name = "explain_cc_proto",
    deprecation = "Use EvalState instead.",
    deps = [":explain_proto"],
)

###############################################################################
## upb
###############################################################################

load("@com_google_protobuf//bazel:upb_c_proto_library.bzl", "upb_c_proto_library")

upb_c_proto_library(
    name = "syntax_upb_proto",
    deps = [":syntax_proto"],
)

upb_c_proto_library(
    name = "checked_upb_proto",
    deps = [":checked_proto"],
)

upb_c_proto_library(
    name = "value_upb_proto",
    deps = [":value_proto"],
)

upb_c_proto_library(
    name = "eval_upb_proto",
    deps = [":eval_proto"],
)

upb_c_proto_library(
    name = "explain_upb_proto",
    deprecation = "Use EvalState instead.",
    deps = [":explain_proto"],
)

###############################################################################
## Python
###############################################################################

load("@com_google_protobuf//bazel:py_proto_library.bzl", "py_proto_library")

py_proto_library(
    name = "syntax_py_pb2",
    deps = [":syntax_proto"],
)

py_proto_library(
    name = "checked_py_pb2",
    deps = [":checked_proto"],
)

py_proto_library(
    name = "value_py_pb2",
    deps = [":value_proto"],
)

py_proto_library(
    name = "eval_py_pb2",
    deps = [":eval_proto"],
)

py_proto_library(
    name = "explain_py_pb2",
    deprecation = "Use EvalState instead.",
    deps = [":explain_proto"],
)
