package(default_visibility = ["//visibility:public"])

##############################################################################
# Common
##############################################################################

proto_library(
    name = "conformance_service_proto",
    srcs = ["conformance_service.proto"],
    strip_import_prefix = "/proto",
    deps = [
        "//proto/cel/expr:checked_proto",
        "//proto/cel/expr:eval_proto",
        "//proto/cel/expr:syntax_proto",
        "@com_google_googleapis//google/rpc:status_proto",
    ],
)

proto_library(
    name = "env_config_proto",
    srcs = ["env_config.proto"],
    strip_import_prefix = "/proto",
    deps = [
        "//proto/cel/expr:checked_proto",
        "@com_google_protobuf//:descriptor_proto",
        "@com_google_protobuf//:struct_proto",
    ],
)

##############################################################################
# Java
##############################################################################

java_proto_library(
    name = "conformance_service_java_proto",
    deps = [":conformance_service_proto"],
)

###############################################################################
## Go
###############################################################################

load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

go_proto_library(
    name = "conformance_service_go_proto",
    importpath = "cel.dev/expr/conformance",
    protos = [":conformance_service_proto"],
    deps = [
        "//proto/cel/expr:expr_go_proto",
        "@org_golang_google_genproto_googleapis_rpc//status:go_default_library",
    ],
)

go_proto_library(
    name = "env_config_go_proto",
    importpath = "cel.dev/expr/conformance",
    protos = [":env_config_proto"],
    deps = [
        "//proto/cel/expr:expr_go_proto",
    ]
)

###############################################################################
## C++
###############################################################################

cc_proto_library(
    name = "conformance_service_cc_proto",
    deps = [":conformance_service_proto"],
)
